Fixing issue with selection on mobile

--- a/app/assets/stylesheets/scrapbooks.css.sass
+++ b/app/assets/stylesheets/scrapbooks.css.sass
@@ -26,7 +26,7 @@ h4.modal-title
     overflow: hidden
     position: relative
 
-    &.selected, &:hover
+    &.selected
       background-color: $blue
       background-position: right 20px center
       background-repeat: no-repeat
@@ -110,8 +110,23 @@ body #add-to-scrapbook-modal
       margin-bottom: 1em
 
 
+/* SCREEN SIZE: SMALL LAPTOPS */
+
+@media screen and (min-width: 992px)
+
+  .scrapbook_selector
+    .scrapbook
+      &:hover
+        background-color: $blue
+        background-position: right 20px center
+        background-repeat: no-repeat
+        background-size: 50px
+        color: white
+        cursor: pointer
 
 
+
+/* SCREEN SIZE: MOBILES */
 
 @media screen and (max-width: 768px)
 
@@ -127,6 +142,7 @@ body #add-to-scrapbook-modal
 
 
 
+/* SCREEN SIZE: SMALL MOBILES */
 
 @media (max-width: 480px)
 
